--- a/Ch04Ex1/appsettings.json
+++ b/Ch04Ex1/appsettings.json
@@ -6,4 +6,8 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "MovieContext": "Server=(localdb)\\mssqllocaldb;Databse=Movies;
+                      Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
