--- a/Ch04Ex1/appsettings.json
+++ b/Ch04Ex1/appsettings.json
@@ -5,9 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieContext": "Server=(localdb)\\mssqllocaldb;Databse=Movies;
-                      Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MovieContext": "Server=(localdb)\\mssqllocaldb;Database=Movies;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
